--- a/SimplePassApp/res/values/strings.xml
+++ b/SimplePassApp/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_act_select_account">Select Account</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_act_generic_frag_test">Testing Generic FragList</string>
 
 </resources>
