Created new fragment to determine the amount of aes iterations the device can do in one second

--- a/SimplePassApp/res/values/strings.xml
+++ b/SimplePassApp/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="secondsSpinnerTitle">Time required to unlock Vault</string>
     <string name="cancel">Cancel</string>
     <string name="create">Create</string>
+    <string name="calculatingSpeed">For security and convenience, we are detecting the speed of your device</string>
 
 </resources>
