--- a/SimplePassApp/res/values/strings.xml
+++ b/SimplePassApp/res/values/strings.xml
@@ -7,11 +7,11 @@
     <string name="title_activity_act_select_account">Select Account</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_act_generic_frag_test">Testing Generic FragList</string>
-    <string name="secondsSpinnerInfo">The time required to open the Vault\nThe longer the time, the safer the Vault</string>
     <string name="vaultNameHint">Vault Name</string>
-    <string name="secondsSpinnerTitle">Time required to unlock Vault</string>
     <string name="cancel">Cancel</string>
     <string name="create">Create</string>
-    <string name="calculatingSpeed">For security and convenience, we are detecting the speed of your device</string>
+    <string name="password">Password</string>
+    <string name="securityLevelHeader">"Security Level: "</string>
+    <string name="iterationSpinnerInfo">The security level balances speed vs security. Low security means a quicker vault unlock</string>
 
 </resources>
