Added a default group to the database

--- a/SimplePassApp/res/values/strings.xml
+++ b/SimplePassApp/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="accountNameHint">Account Name</string>
     <string name="username">Username</string>
     <string name="groupHeader">Group:</string>
+    <string name="defaultGroup">Default</string>
 
 </resources>
