Created a new layout for FragListVault that has a button on the bottom

--- a/SimplePassApp/res/values/strings.xml
+++ b/SimplePassApp/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="enterVaultPasswordTitle">Enter Vault Password</string>
     <string name="enterPassword">Enter Password</string>
     <string name="chooseAccount">Choose an Account</string>
+    <string name="create_new_vault">Create New Vault</string>
    
 
 </resources>
