--- a/SimplePassApp/res/values/strings.xml
+++ b/SimplePassApp/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="title_activity_act_select_account">Select Account</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_act_generic_frag_test">Testing Generic FragList</string>
+    <string name="notification_overlay_title">Overlay is Running</string>
+    <string name="notification_overlay_text">Press me to hide the overlay</string>
     <string name="vaultNameHint">Vault Name</string>
     <string name="cancel">Cancel</string>
     <string name="create">Create</string>
@@ -24,5 +26,7 @@
     <string name="chooseAccount">Choose an Account</string>
     <string name="create_new_vault">Create New Vault</string>
     <string name="create_new_account">Create new account</string>
+    <string name="start_overlay">Start Overlay</string>
+    <string name="stop_overlay">Stop Overlay</string>
 
 </resources>
