--- a/SimplePassApp/res/values/strings.xml
+++ b/SimplePassApp/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="create_new_account">Create new account</string>
     <string name="start_overlay">Start Overlay</string>
     <string name="stop_overlay">Stop Overlay</string>
+    <string name="title_activity_act_tutorial">Tutorial</string>
 
 </resources>
