--- a/SimplePassApp/res/values/strings.xml
+++ b/SimplePassApp/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_act_select_account">Select Account</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="import_pick_file_instructions">Pick a file from your phone that contains the Accounts you want to import</string>
     <string name="title_activity_act_generic_frag_test">Testing Generic FragList</string>
     <string name="notificationOverlayTitle">Overlay is Running</string>
     <string name="notificationOverlayText">Press me to hide the overlay</string>
@@ -58,5 +58,6 @@
     <string name="next">Next</string>
     <string name="pickVaultForImport">Choose the Accounts to place in a Vault</string>
     <string name="mapColumnsForImport">Specify which columns in the CSV file contain the Account name, username, password, and category</string>
+    <string name="pick_file_button">Pick File</string>
 
 </resources>
