--- a/SimplePassApp/res/values/strings.xml
+++ b/SimplePassApp/res/values/strings.xml
@@ -66,5 +66,7 @@
     <string name="ignore_accounts">Ignore Account(s)</string>
     <string name="ignore_accounts_condensed">Ignore</string>
     <string name="import_accounts_condensed">Import</string>
+    <string name="select_a_vault_prompt">Select A Vault</string>
+    <string name="choose_a_vault">Choose A Vault</string>
 
 </resources>
