--- a/SimplePassApp/res/values/strings.xml
+++ b/SimplePassApp/res/values/strings.xml
@@ -68,6 +68,13 @@
     <string name="import_accounts_condensed">Import</string>
     <string name="select_a_vault_prompt">Select A Vault</string>
     <string name="choose_a_vault">Choose A Vault</string>
-    <string name="show_mock_account_detail_button_description">A Magnifying Glass</string>
+    <string name="ic_action_view_desc">A Magnifying Glass</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="username_header">Username</string>
+    <string name="name_header">Name</string>
+    <string name="password_header">Password</string>
+    <string name="category_header">Category</string>
+    <string name="ic_action_edit_desc">A pencil</string>
+    <string name="ic_action_check_desc">A check mark</string>
 
 </resources>
